# claw-installer

./: .gitignore  Makefile  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/research/2026-05-23-openclaw-channels-auto-config/: addendum-prebake-hermes.md  addendum-prebake.md  report.md
gui/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
gui/src/: App.tsx  main.tsx  test-setup.ts
gui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
gui/src-tauri/capabilities/: default.json  installer-unix.json  installer-windows.json  model-fetch.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  dashboard.rs  lib.rs  logger.rs  login_env.rs  main.rs  manifest.rs  steps.rs  tray.rs  types.rs
gui/src/__tests__/: installer-store.test.ts
gui/src/api/: installer.ts
gui/src/i18n/: index.ts
gui/src/lib/: model-config-apply.ts  provider-models.ts
gui/src/store/: installer-store.ts
gui/src/stub/: sample.ts
gui/src/styles/: index.css
installer/: install-hermes.sh  install-openclaw.sh  install.sh  uninstall.sh
installer/docker/: Dockerfile  docker-compose.yml
installer/lib/: common.sh  manifest.sh
installer/steps/: base-deps.sh  fnm.sh  hermes-node.sh  node.sh  npmrc.sh  pnpm.sh  python.sh  shell-rc.sh  system-tools.sh  uv.sh
installer/windows/: bootstrap.ps1
openspec/changes/agent-model-channel-config/: design.md  index.md  tasks.md
openspec/changes/claw-installer-gui-v1/: proposal.md  tasks.md
openspec/changes/frameless-window-and-tray/: design.md  tasks.md
openspec/changes/installer-two-stream-logging/: design.md  tasks.md
openspec/changes/unified-op-dispatch/: tasks.md
shell/: .dockerignore  claw-op.sh  install.sh  uninstall.sh
shell/docker/: docker-entrypoint.sh
shell/lib/: common.sh
shell/steps/: base-deps.sh  bubbolink.sh  fnm.sh  hermes-node.sh  node.sh  npmrc.sh  pnpm.sh  python.sh  shell-rc.sh  system-tools.sh  uv.sh
shell/windows/: bootstrap.ps1  debug-install-wsl.ps1
tools/: wsl-probe-v2.ps1  wsl-probe.ps1
tools/build-linux/: Dockerfile  run-build.sh
tools/claw-op-probe/: Cargo.toml  README.md
tools/wsl-rust-probe/: Cargo.toml
(+98 files in other folders)
