[package]
name = "claw-gui"
version = "1.0.0"
description = "Claw Installer — one-click desktop installer for OpenClaw and Hermes AI agents, by Cylingo Group."
authors = ["Cylingo Group <opensource@cylingo.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cylingo-group/claw-installer"
homepage = "https://bubbolink.com"
readme = "../../README.md"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claw_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

